Bug #165558.  building with --disable-logging and GTK2 default widget fails to compile.  Just remove the MOZ_LOGGING defines since we're using PR_FORCE_LOG anyway.